// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeBanker should make The Banker persona data correctly 1`] = `
Persona {
  "costInformation": PersonaCostInformation {
    "contractCost": Array [
      PersonaContractCost {
        "contractIcon": "/static/images/cost/exporter/transfer-holdership-icon.png",
        "contractPriceInEthereum": "363645756",
        "contractPriceInPolygon": "7854120",
        "contractTitle": "Cost to transfer holdership",
      },
      PersonaContractCost {
        "contractIcon": "/static/images/cost/exporter/transfer-ownership-icon.png",
        "contractPriceInEthereum": "2705949792",
        "contractPriceInPolygon": "58443840",
        "contractTitle": "Cost to transfer ownership",
      },
      PersonaContractCost {
        "contractIcon": "/static/images/cost/total-cost-icon.png",
        "contractPriceInEthereum": "3069595548",
        "contractPriceInPolygon": "66297960",
        "contractTitle": "Total Cost",
      },
    ],
    "costTitle": "Cost for The Exporter",
    "description": "This is a mock description",
  },
  "icon": "/static/images/home/howItWorks/persona/persona4.png",
  "jobTitle": "The Banker",
}
`;

exports[`makeCarrier should make The Carrier persona data correctly 1`] = `
Persona {
  "costInformation": PersonaCostInformation {
    "contractCost": Array [
      PersonaContractCost {
        "contractIcon": "/static/images/cost/carrier/issue-ebl-icon.png",
        "contractPriceInEthereum": "1996184682",
        "contractPriceInPolygon": "43114140",
        "contractTitle": "Cost to Issue eBL",
      },
      PersonaContractCost {
        "contractIcon": "/static/images/cost/carrier/burn-ebl-icon.png",
        "contractPriceInEthereum": "471137688",
        "contractPriceInPolygon": "10175760",
        "contractTitle": "Cost to Burn eBL",
      },
      PersonaContractCost {
        "contractIcon": "/static/images/cost/total-cost-icon.png",
        "contractPriceInEthereum": "2467322370",
        "contractPriceInPolygon": "53289900",
        "contractTitle": "Total Cost",
      },
    ],
    "costTitle": "Cost for The Exporter",
    "description": "This is a mock description",
  },
  "icon": "/static/images/home/howItWorks/persona/persona2.png",
  "jobTitle": "The Carrier",
}
`;

exports[`makeExporter should make The Exporter persona data correctly 1`] = `
Persona {
  "costInformation": PersonaCostInformation {
    "contractCost": Array [
      PersonaContractCost {
        "contractIcon": "/static/images/cost/exporter/transfer-holdership-icon.png",
        "contractPriceInEthereum": "363645756",
        "contractPriceInPolygon": "7854120",
        "contractTitle": "Cost to transfer holdership",
      },
      PersonaContractCost {
        "contractIcon": "/static/images/cost/exporter/transfer-ownership-icon.png",
        "contractPriceInEthereum": "2705949792",
        "contractPriceInPolygon": "58443840",
        "contractTitle": "Cost to transfer ownership",
      },
      PersonaContractCost {
        "contractIcon": "/static/images/cost/total-cost-icon.png",
        "contractPriceInEthereum": "3069595548",
        "contractPriceInPolygon": "66297960",
        "contractTitle": "Total Cost",
      },
    ],
    "costTitle": "Cost for The Exporter",
    "description": "This is a mock description",
  },
  "icon": "/static/images/home/howItWorks/persona/persona1.png",
  "jobTitle": "The Exporter",
}
`;

exports[`makeImporter should make The Importer persona data correctly 1`] = `
Persona {
  "costInformation": PersonaCostInformation {
    "contractCost": Array [
      PersonaContractCost {
        "contractIcon": "/static/images/cost/importer/surrender-ebl-icon.png",
        "contractPriceInEthereum": "778687290",
        "contractPriceInPolygon": "16818300",
        "contractTitle": "Surrender eBL",
      },
    ],
    "costTitle": "Cost for The Exporter",
    "description": "This is a mock description",
  },
  "icon": "/static/images/home/howItWorks/persona/persona3.png",
  "jobTitle": "The Importer",
}
`;
